<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.example.brand_000.atownmap.MainActivity">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:id="@+id/imageView"
        android:src="@drawable/title"
        android:contentDescription="@string/desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:text="@string/mark"
            android:id="@+id/button"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="30sp"
            android:onClick="viewMap"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/explore"
            android:id="@+id/button2"
            android:onClick="viewNearby"
            android:textColor="#fff"
            android:textAlignment="center"
            android:textSize="30sp"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>
