<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brand_000.atownmap.MapActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear">

        <EditText
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/searchbar"
            android:hint="@string/localtxt"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/searchtxt"
            android:id="@+id/searchbtn" />

    </LinearLayout>

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        mapbox:access_token="@string/accessToken"
        android:layout_below="@+id/linear"
        android:layout_alignParentStart="true"
        mapbox:style_url="@string/style_mapbox_streets"
        mapbox:center_latitude="17.9864783"
        mapbox:center_longitude="-76.734621"
        mapbox:zoom="12"
        mapbox:tilt="20"/>

</RelativeLayout>
